update the formats

--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -246,39 +246,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration: 0, training_accuracy: 0.0954, test_accuracy: 0.0943\n",
-      "iteration: 1000, training_accuracy: 0.9197, test_accuracy: 0.9231\n",
-      "iteration: 2000, training_accuracy: 0.9404, test_accuracy: 0.9390\n",
-      "iteration: 3000, training_accuracy: 0.9521, test_accuracy: 0.9487\n",
-      "iteration: 4000, training_accuracy: 0.9590, test_accuracy: 0.9550\n",
-      "iteration: 5000, training_accuracy: 0.9659, test_accuracy: 0.9613\n",
-      "iteration: 6000, training_accuracy: 0.9704, test_accuracy: 0.9645\n",
-      "iteration: 7000, training_accuracy: 0.9739, test_accuracy: 0.9670\n",
-      "iteration: 8000, training_accuracy: 0.9765, test_accuracy: 0.9676\n",
-      "iteration: 9000, training_accuracy: 0.9783, test_accuracy: 0.9692\n",
-      "iteration: 10000, training_accuracy: 0.9803, test_accuracy: 0.9708\n",
-      "iteration: 11000, training_accuracy: 0.9820, test_accuracy: 0.9710\n",
-      "iteration: 12000, training_accuracy: 0.9830, test_accuracy: 0.9729\n",
-      "iteration: 13000, training_accuracy: 0.9844, test_accuracy: 0.9731\n",
-      "iteration: 14000, training_accuracy: 0.9855, test_accuracy: 0.9724\n",
-      "iteration: 15000, training_accuracy: 0.9873, test_accuracy: 0.9736\n",
-      "iteration: 16000, training_accuracy: 0.9882, test_accuracy: 0.9736\n",
-      "iteration: 17000, training_accuracy: 0.9887, test_accuracy: 0.9740\n",
-      "iteration: 18000, training_accuracy: 0.9894, test_accuracy: 0.9752\n",
-      "iteration: 19000, training_accuracy: 0.9898, test_accuracy: 0.9751\n",
-      "iteration: 20000, training_accuracy: 0.9906, test_accuracy: 0.9757\n"
+      "iteration: 0, training_accuracy: 0.0804, test_accuracy: 0.0850\n",
+      "iteration: 1000, training_accuracy: 0.9213, test_accuracy: 0.9253\n",
+      "iteration: 2000, training_accuracy: 0.9414, test_accuracy: 0.9407\n",
+      "iteration: 3000, training_accuracy: 0.9531, test_accuracy: 0.9505\n",
+      "iteration: 4000, training_accuracy: 0.9602, test_accuracy: 0.9561\n",
+      "iteration: 5000, training_accuracy: 0.9660, test_accuracy: 0.9606\n",
+      "iteration: 6000, training_accuracy: 0.9705, test_accuracy: 0.9641\n",
+      "iteration: 7000, training_accuracy: 0.9729, test_accuracy: 0.9658\n",
+      "iteration: 8000, training_accuracy: 0.9755, test_accuracy: 0.9677\n",
+      "iteration: 9000, training_accuracy: 0.9773, test_accuracy: 0.9672\n",
+      "iteration: 10000, training_accuracy: 0.9800, test_accuracy: 0.9699\n",
+      "iteration: 11000, training_accuracy: 0.9819, test_accuracy: 0.9706\n",
+      "iteration: 12000, training_accuracy: 0.9832, test_accuracy: 0.9713\n",
+      "iteration: 13000, training_accuracy: 0.9852, test_accuracy: 0.9718\n",
+      "iteration: 14000, training_accuracy: 0.9862, test_accuracy: 0.9722\n",
+      "iteration: 15000, training_accuracy: 0.9871, test_accuracy: 0.9715\n",
+      "iteration: 16000, training_accuracy: 0.9877, test_accuracy: 0.9713\n",
+      "iteration: 17000, training_accuracy: 0.9888, test_accuracy: 0.9725\n",
+      "iteration: 18000, training_accuracy: 0.9898, test_accuracy: 0.9731\n",
+      "iteration: 19000, training_accuracy: 0.9905, test_accuracy: 0.9725\n",
+      "iteration: 20000, training_accuracy: 0.9908, test_accuracy: 0.9732\n"
      ]
     }
    ],
    "source": [
     "network = MyNeuralNetwork(input_size=784, hidden_size=50, output_size=10)\n",
     "\n",
-    "iters_num = 20001\n",
+    "iters_num = 20000\n",
     "train_size = X_train.shape[0]\n",
     "batch_size = 200\n",
     "learning_rate = 0.1\n",
     "\n",
-    "for i in range(iters_num):\n",
+    "for i in range(iters_num+1):\n",
     "    batch_mask = np.random.choice(train_size, batch_size)\n",
     "    X_batch = X_train[batch_mask]\n",
     "    y_batch = y_train[batch_mask]\n",
